# Marketplace-Price-Tracker

./: README.md  demo.py  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md
scripts/: generate_demo_asset.py
src/marketplace_price_tracker/: __init__.py  bidder.py  cli.py  market_shape.py  pipeline.py
tests/: test_asset_privacy.py  test_market_shape.py  test_pipeline.py  test_public_copy.py
