[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-price-tracker"
version = "1.0.0"
description = "A synthetic demonstration of cross-market price tracking and safe order planning."
requires-python = ">=3.11"

[project.scripts]
price-tracker-demo = "marketplace_price_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
